# Family-Context-PrivateBeta

./: .env.development  .env.production  .gitignore  Dockerfile  LICENSE  Makefile  PACKAGES.md  README.md  family-context-api.yaml  h -f origin ca9252b1ee731c00189dd079a06621265954d7f4  package-lock.json  package.json
3.3 Legal Basis and Data Protection Impact Assessment Protection/: Reference DPIA.docx
Common Data Model/: Common Data Model.xlsx
Reference App/: Makefile
Reference App/API/server/: pyproject.toml  requirements.txt  server.py
Reference App/API/server/api/: __init__.py  auth_controller.py  person_controller.py
Reference App/API/server/apienv/: pyvenv.cfg
Reference App/API/server/data/: housing.csv  school.csv
Reference App/API/server/data_access/: csv.py
Reference App/API/server/swagger_formatter/: __init__.py
Reference App/API/server/swagger_server/: __main__.py
Reference App/API/server/swagger_server/controllers/: auth_controller.py  authorization_controller.py  person_controller.py
Reference App/API/server/swagger_server/models/: __init__.py  adult_social_care.py  body.py  contact.py  housing.py  inline_response200.py  offence_records_found.py  offence_summary.py  pagination_details.py  pagination_info.py  person.py  person_query.py  person_with_relationship.py  police.py  school.py  search_results.py  service_detail.py  service_summary.py
Reference App/API/server/swagger_server/swagger/: swagger.yaml
Reference App/API/server/swagger_server/test/: test_auth_controller.py  test_person_controller.py
client/: package.json
(+307 files in other folders)
